[package]
name = "egui_taffy"
version = "0.5.0"
edition = "2021"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/egui_taffy/"
homepage = "https://github.com/PPakalns/egui_taffy/"
description = "Grid, Flexbox, Block layout support for egui using taffy"
keywords = ["egui", "flexbox", "taffy", "layout", "ui"]
categories = ["gui"]
license = "MIT"
rust-version = "1.81"

[dependencies]
egui = { version = "0.30", default-features = false }
log = { version = "0.4", default-features = false }
taffy = { version = "0.7", default-features = false, features = ["taffy_tree"] }

[features]
default = ["taffy_default"]

taffy_default = [
  "taffy/block_layout",
  "taffy/content_size",
  "taffy/flexbox",
  "taffy/grid",
  "taffy/std",
]

[dev-dependencies]
eframe = { version = "0.30", default-features = false, features = [
  "wgpu",
  "accesskit",
  "default_fonts",
  "wayland",
  "web_screen_reader",
  "x11",
] }
