[package]
name = "egui_taffy"
version = "0.5.0"
edition = "2021"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/egui_taffy/"
homepage = "https://github.com/PPakalns/egui_taffy/"
description = "Grid, Flexbox, Block layout support for egui using taffy"
keywords = ["egui", "flexbox", "taffy", "layout", "ui"]
categories = ["gui"]
license = "MIT"
rust-version = "1.81"
exclude = ["/.github", "./examples/web/"]

[dependencies]
egui = { version = "0.30", default-features = false }
log = { version = "0.4", default-features = false }
taffy = { version = "0.7.3", default-features = false, features = [
  "taffy_tree",
  "detailed_layout_info",
] }

[features]
default = ["taffy_default"]

taffy_default = [
  "taffy/block_layout",
  "taffy/content_size",
  "taffy/flexbox",
  "taffy/grid",
  "taffy/std",
]

[dev-dependencies]
eframe = { version = "0.30", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wgpu",
  "wayland",
  "web_screen_reader",
  "x11",
] }
