[package]
name = "egui_taffy"
version = "0.7.0"
edition = "2021"
authors = ["Pēteris Pakalns"]
repository = "https://github.com/PPakalns/egui_taffy/"
homepage = "https://github.com/PPakalns/egui_taffy/"
description = "Grid, Flexbox, Block layout support for egui using taffy"
keywords = ["egui", "flexbox", "taffy", "layout", "ui"]
categories = ["gui"]
license = "MIT"
rust-version = "1.81"
exclude = ["/.github", "./examples/web/"]

[dependencies]
stackbox = "0.2"
egui = { version = "0.31", default-features = false }
log = { version = "0.4", default-features = false }
taffy = { version = "0.7.5", default-features = false, features = [
  "taffy_tree",
  "detailed_layout_info",
] }
parking_lot = { version = "0.12", features = ["arc_lock"] }
tracing = { version = "0.1", optional = true }

[features]
default = ["taffy_default"]

taffy_default = [
  "taffy/block_layout",
  "taffy/content_size",
  "taffy/flexbox",
  "taffy/grid",
  "taffy/std",
]
tracing = ["dep:tracing"]

[dev-dependencies]
eframe = { version = "0.31", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wgpu",
  "wayland",
  "web_screen_reader",
  "x11",
] }

[patch.crates-io]
# Taffy improvements that have not been released yet
taffy = { git = "https://github.com/PPakalns/taffy", rev = "430ea480cb07e2a264f2edb374bd05c75f1b76e3" }
